@@ -581,3 +581,8 @@
 ## minor fixes to psifit
 ## psfit_options can get or set options for psifit
 
+## 20190309
+##
+## fftfit changed for compatibility
+
+
